fix: support line breaks in summary

--- a/src/style.css
+++ b/src/style.css
@@ -150,6 +150,7 @@ a .fa-external-link {
 p,
 li {
   font-size: 11px;
+  text-align: justify;
 }
 
 blockquote {
@@ -209,6 +210,18 @@ section {
   flex-direction: row;
 }
 
+.profile-pic {
+  margin-top: -5px;
+  margin-right: 18px;
+}
+
+.profile-pic img {
+  height: 52px;
+  width: 52px;
+  border-radius: 50%;
+  border: 2px solid #56817A;
+}
+
 .header .title {
   flex-grow: 1;
 }
@@ -227,32 +240,15 @@ section {
   gap: 1em;
 }
 
+/* Summary Section */
+.summary {
+  margin: 5px 0 5px;
+}
+
 .keyline {
   width: 45px;
   margin: 8px 0 10px;
   border-top: 1px solid #56817A;
-}
-
-.clearfix:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-.profile-pic {
-  margin-top: -5px;
-  margin-right: 18px;
-}
-
-.profile-pic img {
-  height: 52px;
-  width: 52px;
-  border-radius: 50%;
-  border: 2px solid #56817A;
-}
-
-.summary {
-  margin: 5px 0 5px;
 }
 
 .sublink {
